<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="HmiToPlc" Id="{6d2da17e-ff76-4f99-afa6-115a510e7de8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL	
	bEnable : BOOL := FALSE;	
	bReset : BOOL := FALSE;
	bSoftStop : BOOL := FALSE;
	
	
	bSafety_GroupPort_ErrAck : BOOL := FALSE;
	bSafety_EStopRestart  : BOOL := FALSE;	
	bSafety_Drive_Axis_ErrReset : BOOL := FALSE;
	

	fPosInput : ARRAY [0..2] OF LREAL := [90,0,0];
	fVelInput : ARRAY [0..2] OF LREAL := [0,0,0];
	
	eRobotMode : E_RobotMode := E_RobotMode.NONE;
	
	bPositionModeExecute : BOOL := FALSE;
	
	bEnableManualControl : BOOL := FALSE;
	
	bPositionMode : BOOL := FALSE;
	bVelocityMode : BOOL := FALSE;
	bTorqueMode : BOOL := FALSE;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>